--- a/src/components/styles/MapComponentStyle.css
+++ b/src/components/styles/MapComponentStyle.css
@@ -56,6 +56,71 @@ a.popup-link:hover {
 text-decoration: underline; /* Add underline on hover if desired */
 }
 
+.map-container {
+    position: relative;
+  }
+  
+/* Map Overlay Styles */
+.map-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 60%;
+    height: 90%;
+    background-color: rgba(0, 0, 0, 0.7); /* Adjust alpha value for transparency */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999; /* Adjust z-index as needed to make sure it's on top */
+  }
+
+  .lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    4.9% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    5% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+
 /* Media query for responsiveness */
 @media screen and (max-width: 600px) {
 .leaflet-popup-content-wrapper {
