--- a/src/components/styles/KpiSectionComponent.css
+++ b/src/components/styles/KpiSectionComponent.css
@@ -1,4 +1,12 @@
 /* KpiSectionComponent.css */
+* {
+  color: #5a5a5a;
+}
+
+h2 {
+  color: #0f325a;
+}
+
 .kpi-section {
     margin-bottom: 10px;
     padding: 10px;
@@ -25,5 +33,10 @@
   }
   
   .kpi-section-text {
+    color: #5a5a5a;
+    font-size: .8em;
+    line-height: 1.3;
+    margin-bottom: 7px;
     flex: 2; /* Adjust the width of the text column as needed */
   }
+  
